force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Used on Approval Request screens as a workaround to this known issue: https://issues.salesforce.com/issue/a028c00000qQ2VPAA0/business-account-name-will-not-display-on-the-approval-detail-page-layout-for-business-accounts-when-person-accounts-is-enabled

Can be removed once issue has been resolved.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_self&quot;)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>