force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>This auto number is appended to a Household Account name, when it is created</description>
    <displayFormat>OW{00}</displayFormat>
    <label>Household account number</label>
    <type>AutoNumber</type>
</CustomField>