force-app/main/default/objects/Account/fields/Account_record_type_mimic__c.field-meta.xml
<CustomField>
    <fullName>Account_record_type_mimic__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account record type (mimic)</label>
    <type>Text</type>
</CustomField>