force-app/main/default/objects/Account/fields/Additional_Monthly_Outgoings__c.field-meta.xml
<CustomField>
    <fullName>Additional_Monthly_Outgoings__c</fullName>
    <description>Amount of additional outgoings</description>
    <label>Additional outgoings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>