force-app/main/default/objects/Account/fields/Additional_Outgoings_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Additional_Outgoings_Frequency__c</fullName>
    <description>Cadence of specified outgoings</description>
    <label>Additional outgoings frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>