force-app/main/default/objects/Account/fields/AML_Check__c.field-meta.xml
<CustomField>
    <fullName>AML_Check__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to most recent AML check record</description>
    <label>Recent AML check</label>
    <referenceTo>AML__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>