force-app/main/default/objects/Account/fields/Annual_Review_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Schedule__c</fullName>
    <defaultValue>&quot;Scheduled&quot;</defaultValue>
    <description>Picklist for whether the annual review is scheduled or outstanding</description>
    <label>Annual review schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>