force-app/main/default/objects/Account/fields/Anticipated_Changes_to_Income__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Changes_to_Income__c</fullName>
    <description>Notes on any anticipated changes to client / household income</description>
    <label>Anticipated changes to income</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>