force-app/main/default/objects/Account/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Deprecated by enhanced bank details</description>
    <label>Bank account number (legacy)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>