force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Deprecated by enhanced bank details</description>
    <label>Bank name (legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>