force-app/main/default/objects/Account/fields/Bank_sort_code__c.field-meta.xml
<CustomField>
    <fullName>Bank_sort_code__c</fullName>
    <description>Deprecated by enhanced bank details</description>
    <label>Bank sort code (legacy)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>