force-app/main/default/objects/Account/fields/Cash_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cash_Frequency__c</fullName>
    <description>Frequency of cash</description>
    <label>Cash frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>