force-app/main/default/objects/Account/fields/CashSavingsMonthly__c.field-meta.xml
<CustomField>
    <fullName>CashSavingsMonthly__c</fullName>
    <description>Takes cash savings at any frequency and returns monthly figure</description>
    <formula>IF( ISPICKVAL( Cash_Frequency__c ,&quot;Weekly&quot;), 52*Cash__c/12,
IF( ISPICKVAL(Cash_Frequency__c ,&quot;Monthly&quot;), Cash__c,
IF( ISPICKVAL(Cash_Frequency__c ,&quot;Annually&quot;), Cash__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Savings (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>