force-app/main/default/objects/Account/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <description>Certificate number</description>
    <label>Certificate number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>