force-app/main/default/objects/Account/fields/ChildcareSpendingMonthly__c.field-meta.xml
<CustomField>
    <fullName>ChildcareSpendingMonthly__c</fullName>
    <description>Takes spending of childcare at any frequency and returns monthly spend</description>
    <formula>IF(ISPICKVAL( Cost_of_Childcare_Frequency__c , &quot;Weekly&quot;),52*Cost_of_Childcare__c/12, IF(ISPICKVAL(Cost_of_Childcare_Frequency__c,&quot;Monthly&quot;),Cost_of_Childcare__c,
IF(ISPICKVAL(Cost_of_Childcare_Frequency__c,&quot;Annually&quot;), Cost_of_Childcare__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Childcare spending (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>