force-app/main/default/objects/Account/fields/Client_s_Present_in_Discovery_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Present_in_Discovery_Meeting__c</fullName>
    <inlineHelpText>Select which clients were present at the meeting.</inlineHelpText>
    <label>Client(s) present in discovery meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client 1</fullName>
            </value>
            <value>
                <fullName>Client 2</fullName>
                <label>Client 1 and 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>