force-app/main/default/objects/Account/fields/CognitoMigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>CognitoMigrationStatus__c</fullName>
    <description>Business use: No relevant
Tech Use: To understand if client existed in portal before cognito, and when they have been migrated across to cognito.
Data inputters: system
Data Users: tech team</description>
    <label>Cognito migration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Migrated</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>