force-app/main/default/objects/Account/fields/Colleague__c.field-meta.xml
<CustomField>
    <fullName>Colleague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colleague</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>