force-app/main/default/objects/Account/fields/ConflictOfInterest__c.field-meta.xml
<CustomField>
    <fullName>ConflictOfInterest__c</fullName>
    <label>Conflict of Interest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>