force-app/main/default/objects/Account/fields/ConsumerDutySurveyStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsumerDutySurveyStatus__c</fullName>
    <description>Status of consumer duty servay for client / household</description>
    <label>Consumer duty survey status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migrate</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>