force-app/main/default/objects/Account/fields/CoreSegment__c.field-meta.xml
<CustomField>
    <fullName>CoreSegment__c</fullName>
    <description>Core segment, controls sub-segment picklist field</description>
    <label>Core segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accumulator</fullName>
            </value>
            <value>
                <fullName>Approaching retirement</fullName>
            </value>
            <value>
                <fullName>In retirement / Taking income</fullName>
            </value>
            <value>
                <fullName>Later life and estate planner</fullName>
            </value>
            <value>
                <fullName>Children of clients who turn 18</fullName>
            </value>
            <value>
                <fullName>Trusts as household</fullName>
            </value>
            <value>
                <fullName>Mortgage service only</fullName>
            </value>
            <value>
                <fullName>Family investment companies (FICs)</fullName>
            </value>
            <value>
                <fullName>Outside of the segment criteria</fullName>
            </value>
            <value>
                <fullName>Execution only staff member</fullName>
            </value>
            <value>
                <fullName>Accumulator and approaching retirement</fullName>
                <isActive>false</isActive>
                <label>Accumulator and approaching retirement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>