force-app/main/default/objects/Account/fields/CoreSegmentStatus__c.field-meta.xml
<CustomField>
    <fullName>CoreSegmentStatus__c</fullName>
    <description>Picklist of is the core segment is in or out of criteria</description>
    <label>Core segment status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CoreSegment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In criteria</fullName>
            </value>
            <value>
                <fullName>Out of criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>