force-app/main/default/objects/Account/fields/Cost_of_Childcare__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Childcare__c</fullName>
    <description>Cost of childcare amount</description>
    <label>Cost of childcare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>