force-app/main/default/objects/Account/fields/Cost_of_Childcare_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Childcare_Frequency__c</fullName>
    <description>Frequency of cost of childcare</description>
    <label>Cost of childcare frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>