force-app/main/default/objects/Account/fields/Cost_of_Education_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Education_Frequency__c</fullName>
    <label>Cost of Education Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>