force-app/main/default/objects/Account/fields/Costs_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Costs_of_Education__c</fullName>
    <description>Amount spent on education</description>
    <label>Costs of education</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>