force-app/main/default/objects/Account/fields/Country_of_Domicile__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Domicile__c</fullName>
    <description>Country client domiciled in</description>
    <label>Country of domicile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>