force-app/main/default/objects/Account/fields/Dashboard_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Visibility__c</fullName>
    <description>Toggles visibility of the dashboard on the portal. If visibility is &quot;off&quot;, clients can only access their profile.</description>
    <inlineHelpText>Toggles visibility of the dashboard on the portal. If visibility is &quot;off&quot;, clients can only access their profile.</inlineHelpText>
    <label>Dashboard visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off</fullName>
                <default>true</default>
                <label>Off</label>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>