force-app/main/default/objects/Account/fields/Date_Client_Confirmed_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Confirmed_Understanding__c</fullName>
    <description>The date on which the client confirmed their understanding of the DB Triage Process</description>
    <label>Date client confirmed understanding</label>
    <type>Date</type>
</CustomField>