force-app/main/default/objects/Account/fields/Date_DB_Triage_Document_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_DB_Triage_Document_Sent__c</fullName>
    <description>The date when the DB triage document was sent to the client.</description>
    <label>Date DB triage document sent</label>
    <type>Date</type>
</CustomField>