force-app/main/default/objects/Account/fields/Date_terms_of_business_last_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_terms_of_business_last_accepted__c</fullName>
    <label>Date terms of business last accepted</label>
    <type>Date</type>
</CustomField>