force-app/main/default/objects/Account/fields/Date_Vulnerability_Detected__c.field-meta.xml
<CustomField>
    <fullName>Date_Vulnerability_Detected__c</fullName>
    <description>Latest date client&#39;s vulnerability was assessed</description>
    <label>Date vulnerability last assessed</label>
    <type>Date</type>
</CustomField>