force-app/main/default/objects/Account/fields/DateConflictOfInterestAssessed__c.field-meta.xml
<CustomField>
    <fullName>DateConflictOfInterestAssessed__c</fullName>
    <description>Date the conflict of interest was assessed.</description>
    <label>Date conflict of interest assessed</label>
    <type>Date</type>
</CustomField>