force-app/main/default/objects/Account/fields/DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeath__c</fullName>
    <description>Records the date the person passed away</description>
    <label>Date of death</label>
    <type>Date</type>
</CustomField>