force-app/main/default/objects/Account/fields/DateOfFirstAdvice__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstAdvice__c</fullName>
    <description>The date when the client first received advice from us</description>
    <label>Date of first advice</label>
    <type>Date</type>
</CustomField>