force-app/main/default/objects/Account/fields/DB_Advice_Count__c.field-meta.xml
<CustomField>
    <fullName>DB_Advice_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Counting number of pieces of DB advice undertaken for the client</description>
    <label>DB Advice Count</label>
    <type>Checkbox</type>
</CustomField>