force-app/main/default/objects/Account/fields/DB_Triage_Notes__c.field-meta.xml
<CustomField>
    <fullName>DB_Triage_Notes__c</fullName>
    <label>DB Triage Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>