force-app/main/default/objects/Account/fields/DB_Triage_Task_Open__c.field-meta.xml
<CustomField>
    <fullName>DB_Triage_Task_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as part of the DB triage process. Hidden field.</description>
    <label>DB triage task open</label>
    <type>Checkbox</type>
</CustomField>