force-app/main/default/objects/Account/fields/Discovery_Level_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Level_of_Risk__c</fullName>
    <description>Level of risk gleaned from discovery call</description>
    <label>Discovery level of risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A low risk investor</fullName>
            </value>
            <value>
                <fullName>A medium risk investor</fullName>
            </value>
            <value>
                <fullName>A high risk investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>