force-app/main/default/objects/Account/fields/Do_you_have_any_connections_with_the_USA__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_connections_with_the_USA__c</fullName>
    <description>Checkbox linked to portal for clients to indicate if they have any connections with the USA</description>
    <label>Do you have any connections with the USA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>