force-app/main/default/objects/Account/fields/Dual_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Dual_Nationality__c</fullName>
    <description>Indicates if the client holds a duel nationality</description>
    <label>Dual nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>