force-app/main/default/objects/Account/fields/EducationSpendingMonthly__c.field-meta.xml
<CustomField>
    <fullName>EducationSpendingMonthly__c</fullName>
    <description>Takes costs of education at any frequency and returns monthly</description>
    <formula>IF(ISPICKVAL( Cost_of_Education_Frequency__c , &quot;Weekly&quot;),52* Costs_of_Education__c /12, IF(ISPICKVAL(Cost_of_Education_Frequency__c,&quot;Monthly&quot;),Costs_of_Education__c,
IF(ISPICKVAL(Cost_of_Education_Frequency__c,&quot;Annually&quot;), Costs_of_Education__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education Spending (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>