force-app/main/default/objects/Account/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <description>Additional field for email addresses for the Household</description>
    <label>Household email(s)</label>
    <type>Email</type>
</CustomField>