force-app/main/default/objects/Account/fields/Email_preferences__c.field-meta.xml
<CustomField>
    <fullName>Email_preferences__c</fullName>
    <inlineHelpText>Who should be included on emails that relate to the Household.</inlineHelpText>
    <label>Email contact preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary member</fullName>
            </value>
            <value>
                <fullName>All members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>