force-app/main/default/objects/Account/fields/Email_synced_with_database__c.field-meta.xml
<CustomField>
    <fullName>Email_synced_with_database__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email synced with database</label>
    <type>Checkbox</type>
</CustomField>