force-app/main/default/objects/Account/fields/EmailRecipientValidationBypass__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipientValidationBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether validation on outbound emails should be restricted to clients in the household.</description>
    <inlineHelpText>If ticked, email recipients will not be restricted to household members.</inlineHelpText>
    <label>Email recipient validation bypass</label>
    <type>Checkbox</type>
</CustomField>