force-app/main/default/objects/Account/fields/EssentialSpendingMonthly__c.field-meta.xml
<CustomField>
    <fullName>EssentialSpendingMonthly__c</fullName>
    <description>Takes the essential spending at any frequency and converts to monthly</description>
    <formula>IF( ISPICKVAL(OW_essential_spending_frequency__c, &quot;Weekly&quot;),  52*OW_essential_spending__c/12, IF(ISPICKVAL(OW_essential_spending_frequency__c, &quot;Monthly&quot;), OW_essential_spending__c,
IF(ISPICKVAL(OW_essential_spending_frequency__c, &quot;Annually&quot;), OW_essential_spending__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential spending (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>