force-app/main/default/objects/Account/fields/Exclude_From_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the household / client should be excluded from reporting</description>
    <label>Exclude from reporting</label>
    <type>Checkbox</type>
</CustomField>