force-app/main/default/objects/Account/fields/Expected_Windfalls__c.field-meta.xml
<CustomField>
    <fullName>Expected_Windfalls__c</fullName>
    <description>Notes on any expected windfalls</description>
    <label>Expected windfalls</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>