force-app/main/default/objects/Account/fields/Fact_Find_Type__c.field-meta.xml
<CustomField>
    <fullName>Fact_Find_Type__c</fullName>
    <defaultValue>&quot;Discovery&quot;</defaultValue>
    <inlineHelpText>This field toggles what version of the fact find the client sees in the portal</inlineHelpText>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>