force-app/main/default/objects/Account/fields/Fact_Find_Validations_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Fact_Find_Validations_Outstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, there are fact find entries that need to be validated. This will block the saving of any records related to the household</description>
    <inlineHelpText>If checked, there are fact find entries that need to be validated. This will block the saving of any records related to the household</inlineHelpText>
    <label>Fact find validations outstanding</label>
    <type>Checkbox</type>
</CustomField>