force-app/main/default/objects/Account/fields/Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Code__c</fullName>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>