force-app/main/default/objects/Account/fields/FF_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_Session_ID__c</fullName>
    <description>Used in the Snapshop flow to hold the session ID and trigger process builders</description>
    <label>FF session ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>