force-app/main/default/objects/Account/fields/FinaMetrica_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>FinaMetrica_Risk_Score__c</fullName>
    <description>1-100 score from FinaMetrica of clients risk</description>
    <inlineHelpText>1-100</inlineHelpText>
    <label>FinaMetrica risk score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>