force-app/main/default/objects/Account/fields/FinServ__InvestmentExperience__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InvestmentExperience__c</fullName>
    <description>Client&#39;s investment experience.</description>
    <label>Investment Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Moderately Experienced</fullName>
            </value>
            <value>
                <fullName>Moderately Inexperienced</fullName>
            </value>
            <value>
                <fullName>Inexperienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>