force-app/main/default/objects/Account/fields/FinServ__KYCStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__KYCStatus__c</fullName>
    <inlineHelpText>Old KYC status. If blank, a new KYC check should appear below. If filled out, checks are not tracked in Salesforce.</inlineHelpText>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed (electronic checks)</fullName>
            </value>
            <value>
                <fullName>Passed (electronic checks + docs)</fullName>
            </value>
            <value>
                <fullName>Failed (further info req)</fullName>
            </value>
            <value>
                <fullName>Failed (cannot continue)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>